1.3.1
Fixed permission issue for admin menu.